# osc-triggers

./: Cargo.toml  README.md  config.toml  flake.nix
.builds/: changed-paths.sh  mirror.yml  tests.yml  website.yml
.github/workflows/: release.yml
src/: main.rs
website/: index.html  xess.css
