[package]
name = "osc-triggers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
rosc = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
